@@ -9,6 +9,7 @@
 - IMPROVE: Retrieve after resolve feature does not clean target directory first (IVYDE-105)
 
 - FIX: IvyDE crashes during resolve due to an incompatibility with Eclipse 3.2 (IVYDE-108)
+- FIX: Ivy preferences page mentions ivyconf not ivysettings (IVYDE-103)
 
   version 2.0.0 alpha1
 ===========================
